--- a/DotnetTrainingStockApp/DotnetTrainingStockApp.csproj
+++ b/DotnetTrainingStockApp/DotnetTrainingStockApp.csproj
@@ -62,6 +62,17 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="Syncfusion.Maui.Buttons" Version="24.2.9" />
+		<PackageReference Include="Syncfusion.Maui.Core" Version="24.2.9" />
+		<PackageReference Include="Syncfusion.Maui.DataGrid" Version="24.2.9" />
+		<PackageReference Include="Syncfusion.Maui.ListView" Version="24.2.9" />
+		<PackageReference Include="Syncfusion.Maui.NavigationDrawer" Version="24.2.9" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="ListView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
