--- a/DotnetTrainingStockApp/DotnetTrainingStockApp.csproj
+++ b/DotnetTrainingStockApp/DotnetTrainingStockApp.csproj
@@ -63,6 +63,8 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.8" />
 		<PackageReference Include="Syncfusion.Maui.Buttons" Version="24.2.9" />
 		<PackageReference Include="Syncfusion.Maui.Cards" Version="24.2.9" />
 		<PackageReference Include="Syncfusion.Maui.Core" Version="24.2.9" />
