--- a/DotnetTrainingStockApp/DotnetTrainingStockApp.csproj
+++ b/DotnetTrainingStockApp/DotnetTrainingStockApp.csproj
@@ -71,6 +71,7 @@
 		<PackageReference Include="Syncfusion.Maui.DataGrid" Version="24.2.9" />
 		<PackageReference Include="Syncfusion.Maui.ListView" Version="24.2.9" />
 		<PackageReference Include="Syncfusion.Maui.NavigationDrawer" Version="24.2.9" />
+		<PackageReference Include="System.Drawing.Common" Version="8.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
